--- a/reg_form/style.css
+++ b/reg_form/style.css
@@ -54,6 +54,7 @@ body {
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 20px;
+    color:whitesmoke;
 }
 
 .input-box {
@@ -173,6 +174,7 @@ label {
 .contact-us p {
     color: #fff;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .contact-us form {
@@ -192,7 +194,7 @@ label {
     margin-bottom: 20px;
     border-radius: 5px;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .contact-us button {
@@ -228,6 +230,13 @@ label {
 @media only screen and (max-width: 480px) {
     .wrapper {
         padding: 30px;
+    }
+    .social-login-btn {
+        width: 48%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
     }
     .input-field {
         width: 100%;
